--- a/stock-alarms-frontend/package.json
+++ b/stock-alarms-frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-search-box": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
